--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <img id="logo" src="Media/img-tea-cozy-logo.png">
+        <header class="container">
+            <div class="logoleft">
+                <img id="logo" src="Media/img-tea-cozy-logo.png">
+            </div>
             <nav>
                 <ul>
                     <li>Mission</li>
