--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     </head>
     <body>
         <header class="container">
-            <div class="logoleft">
-                <img id="logo" src="Media/img-tea-cozy-logo.png">
-            </div>
-            <nav>
+            <img src="Media/img-tea-cozy-logo.png">
+            <nav id="navright">
                 <ul>
                     <li>Mission</li>
                     <li>Featured Tea</li>
@@ -17,39 +15,35 @@
                 </ul>
             </nav>
         </header>
-        <section id="mission" class="container">
-            <h2 class="box">Our Mission</h2>
-            <h4 class="box">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-        </section>
-        <section id="month" class="container">
-            <h2>Tea of the Month</h2>
-            <h4>What's Steeping at The Tea Cozy?</h4>
-            <img id="berry" class="img box" src="Media/img-berryblitz.jpg">
-            <h4>Fall Berry Blitz Tea</h4>
-            <img id="spiced" class="img box" src="Media/img-spiced-rum.jpg">
-            <h4>Spiced Rum Tea</h4>
-            <img id="donuts" class="img box" src="Media/img-donut.jpg">
-            <h4>Seasonal Donuts</h4>
-            <img id="myrtle" class="img box" src="Media/img-myrtle-ave.jpg">
-            <h4>Myrtle Ave Tea</h4>
-            <img id="bedford" class="img box" src="Media/img-bedford-bizarre.jpg">
-            <h4>Bedford Bizarre Tea</h4>
-        </section>
-        <section id="locations" class="container">
-            <h2>Locations</h2>
-            <div id="downtown">
+        <main>
+            <section id="mission">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </section>
+            <!--<section id="month" class="container">
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping at The Tea Cozy?</h4>
+                <img id="berry" class="img box" src="Media/img-berryblitz.jpg">
+                <h4>Fall Berry Blitz Tea</h4>
+                <img id="spiced" class="img box" src="Media/img-spiced-rum.jpg">
+                <h4>Spiced Rum Tea</h4>
+                <img id="donuts" class="img box" src="Media/img-donut.jpg">
+                <h4>Seasonal Donuts</h4>
+                <img id="myrtle" class="img box" src="Media/img-myrtle-ave.jpg">
+                <h4>Myrtle Ave Tea</h4>
+                <img id="bedford" class="img box" src="Media/img-bedford-bizarre.jpg">
+                <h4>Bedford Bizarre Tea</h4>
+            </section>
+            <section id="locations" class="container">
+                <h2>Locations</h2>
                 <h3>Downtown</h3>
                 <p>384 West 4th St Sutie 108 Portland, Maine</p>
-            </div>
-            <div id="bayside">
                 <h3>East Bayside</h3>
                 <p>3433 Phisherman's Avenue (Northwest Corner) Portland, Maine</p>
-            </div>
-            <div id="oakdale">
                 <h3>Oakdale</h3>
                 <p>515 Crescent Avenue Second Floor Portland, Maine</p>
-            </div>
-        </section>
+        </section>-->
+        </main> 
     </body>
     <footer>
         <h2>The Tea Cozy</h2>
