--- a/index.html
+++ b/index.html
@@ -20,21 +20,33 @@
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
             </section>
-            <!--<section id="month" class="container">
+            <section id="month" class="container">
                 <h2>Tea of the Month</h2>
                 <h4>What's Steeping at The Tea Cozy?</h4>
-                <img id="berry" class="img box" src="Media/img-berryblitz.jpg">
-                <h4>Fall Berry Blitz Tea</h4>
-                <img id="spiced" class="img box" src="Media/img-spiced-rum.jpg">
-                <h4>Spiced Rum Tea</h4>
-                <img id="donuts" class="img box" src="Media/img-donut.jpg">
-                <h4>Seasonal Donuts</h4>
-                <img id="myrtle" class="img box" src="Media/img-myrtle-ave.jpg">
-                <h4>Myrtle Ave Tea</h4>
-                <img id="bedford" class="img box" src="Media/img-bedford-bizarre.jpg">
-                <h4>Bedford Bizarre Tea</h4>
+                <div id="teatypes">
+                    <div class="imgbox">
+                        <img src="Media/img-berryblitz.jpg">
+                        <h4>Fall Berry Blitz Tea</h4>
+                    </div>
+                    <div class="imgbox">
+                        <img src="Media/img-spiced-rum.jpg">
+                        <h4>Spiced Rum Tea</h4>
+                    </div>
+                    <div class="imgbox">
+                        <img id="imgbox" src="Media/img-donut.jpg">
+                        <h4 id="imgbox">Seasonal Donuts</h4>
+                    </div>
+                    <div class="imgbox">
+                        <img id="imgbox" src="Media/img-myrtle-ave.jpg">
+                        <h4 id="imgbox">Myrtle Ave Tea</h4>
+                    </div>
+                    <div class="imgbox">
+                        <img id="imgbox" src="Media/img-bedford-bizarre.jpg">
+                        <h4 id="imgbox">Bedford Bizarre Tea</h4>
+                    </div>
+                </div>  
             </section>
-            <section id="locations" class="container">
+            <section id="locations">
                 <h2>Locations</h2>
                 <h3>Downtown</h3>
                 <p>384 West 4th St Sutie 108 Portland, Maine</p>
@@ -42,7 +54,7 @@
                 <p>3433 Phisherman's Avenue (Northwest Corner) Portland, Maine</p>
                 <h3>Oakdale</h3>
                 <p>515 Crescent Avenue Second Floor Portland, Maine</p>
-        </section>-->
+        </section>
         </main> 
     </body>
     <footer>
