--- a/index.html
+++ b/index.html
@@ -46,14 +46,34 @@
                     </div>
                 </div>  
             </section>
-            <section id="locations">
+            <section class="locations" id="lochead">
                 <h2>Locations</h2>
+                <div id="locationrow">
+                <div class="locbox">
                 <h3>Downtown</h3>
-                <p>384 West 4th St Sutie 108 Portland, Maine</p>
+                <p>384 West 4th St 
+                    <br>
+                    Sutie 108 
+                    <br>
+                    Portland, Maine</p>
+                </div>
+                <div class="locbox">
                 <h3>East Bayside</h3>
-                <p>3433 Phisherman's Avenue (Northwest Corner) Portland, Maine</p>
+                <p>3433 Phisherman's Avenue 
+                    <br>
+                    (Northwest Corner) 
+                    <br>
+                    Portland, Maine</p>
+                </div>
+                <div class="locbox">
                 <h3>Oakdale</h3>
-                <p>515 Crescent Avenue Second Floor Portland, Maine</p>
+                <p>515 Crescent Avenue 
+                    <br>
+                    Second Floor 
+                    <br>
+                    Portland, Maine</p>
+                </div>
+            </div>
         </section>
         </main> 
     </body>
