--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
         </main> 
     </body>
     <footer>
+        <div class="contact">
         <h2>The Tea Cozy</h2>
         <h5>contact@theteacozy.com</h5>
         <h5>917-555-8904</h5>
-        <h5>copyright The Tea Cozy 2017</h5>
+        </div>
+        <h5 id="copyright">copyright The Tea Cozy 2017</h5>
     </footer>
 </html>
